Initial Quobyte support

--- a/api/swagger-spec/apps_v1alpha1.json
+++ b/api/swagger-spec/apps_v1alpha1.json
@@ -1413,6 +1413,10 @@
      "vsphereVolume": {
       "$ref": "v1.VsphereVirtualDiskVolumeSource",
       "description": "VsphereVolume represents a vSphere volume attached and mounted on kubelets host machine"
+     },
+     "quobyte": {
+      "$ref": "v1.QuobyteVolumeSource",
+      "description": "Quobyte represents a Quobyte mount on the host that shares a pod's lifetime"
      }
     }
    },
@@ -1978,6 +1982,36 @@
      "fsType": {
       "type": "string",
       "description": "Filesystem type to mount. Must be a filesystem type supported by the host operating system. Ex. \"ext4\", \"xfs\", \"ntfs\". Implicitly inferred to be \"ext4\" if unspecified."
+     }
+    }
+   },
+   "v1.QuobyteVolumeSource": {
+    "id": "v1.QuobyteVolumeSource",
+    "description": "Represents a Quobyte mount that lasts the lifetime of a pod. Quobyte volumes do not support ownership management or SELinux relabeling.",
+    "required": [
+     "registry",
+     "volume"
+    ],
+    "properties": {
+     "registry": {
+      "type": "string",
+      "description": "Registry represents a single or multiple Quobyte Registry services specified as a string as host:port pair (multiple entries are separated with commas) which acts as the central registry for volumes"
+     },
+     "volume": {
+      "type": "string",
+      "description": "Volume is a string that references an already created Quobyte volume by name."
+     },
+     "readOnly": {
+      "type": "boolean",
+      "description": "ReadOnly here will force the Quobyte volume to be mounted with read-only permissions. Defaults to false."
+     },
+     "user": {
+      "type": "string",
+      "description": "User to map volume access to Defaults to serivceaccount user"
+     },
+     "group": {
+      "type": "string",
+      "description": "Group to map volume access to Default is no group"
      }
     }
    },
