Do not ignore .drone.sec file

--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,6 @@ kubernetes.tar.gz
 /.make/
 # Just in time generated data in the source, should never be commited
 /test/e2e/generated/bindata.go
+
+# This file used by some vendor repos (e.g. github.com/go-openapi/...) to store secret variables and should not be ignored
+!\.drone\.sec
