Refactor hyperkube, remove unneccesary programs, optimize layers, bump cni version, add new features, run kube-proxy in a daemonset

--- a/cluster/images/hyperkube/kube-proxy-ds.yaml
+++ b/cluster/images/hyperkube/kube-proxy-ds.yaml
@@ -12,8 +12,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# TODO: Move out kube-proxy to a DaemonSet again
-# This is disabled for the v1.3 release, due to bootstrapping complexities
 apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
@@ -22,14 +20,12 @@ metadata:
   labels:
     k8s-app: k8s-proxy
     version: v1
-    kubernetes.io/cluster-service: "true"
 spec:
   template:
     metadata:
       labels:
         k8s-app: k8s-proxy
         version: v1
-        kubernetes.io/cluster-service: "true"
     spec:
       hostNetwork: true
       containers:
@@ -38,8 +34,16 @@ spec:
         command:
         - /hyperkube
         - proxy
-        - --master=http://127.0.0.1:8080
+        - --kubeconfig=/var/lib/kubelet/kubeconfig.yaml
         - --v=2
         - --resource-container=""
         securityContext:
           privileged: true
+        volumeMounts:
+          mountPath: /var/lib/kubelet/kubeconfig.yaml
+          name: kubeconfig
+          readOnly: true
+      volumes:
+      - name: kubeconfig
+        hostPath:
+          path: /var/lib/kubelet/kubeconfig.yaml
