--- a/test/e2e_node/jenkins/jenkins-serial.properties
+++ b/test/e2e_node/jenkins/jenkins-serial.properties
@@ -5,7 +5,5 @@ GCE_PROJECT=k8s-jkns-ci-node-e2e
 CLEANUP=true
 GINKGO_FLAGS='--focus="\[Serial\]" --skip="\[Flaky\]"'
 SETUP_NODE=false
-# DISABLED --cgroups-per-qos flag until feature stabilized.
-#TEST_ARGS=--cgroups-per-qos=false
-TEST_ARGS=
+TEST_ARGS=--cgroups-per-qos=false
 PARALLELISM=1
