Adds actions descriptions to the README
Updates the action descriptions for a crisper CLI output. THe longer
descriptions were word-wrapping and didn't add much value to the text.
Longer descriptions have been moved to the README.

--- a/cluster/juju/layers/kubernetes/actions.yaml
+++ b/cluster/juju/layers/kubernetes/actions.yaml
@@ -13,9 +13,7 @@ microbot:
         description: If true removes the microbots
 pause:
     description: |
-      Cordon the unit, pausing all future workload scheduling on this unit,
-      and drains active workloads
+      Cordon the unit, draining all active workloads.
 resume:
     description: |
-      UnCordon the unit, enabling workload scheduling. Workloads
-      will automatically balance into the unit
+      UnCordon the unit, enabling workload scheduling.
