--- a/api/swagger-spec/extensions_v1beta1.json
+++ b/api/swagger-spec/extensions_v1beta1.json
@@ -8353,6 +8353,23 @@
      "template": {
       "$ref": "v1.PodTemplateSpec",
       "description": "Template is the object that describes the pod that will be created. The DaemonSet will create exactly one copy of this pod on every node that matches the template's node selector (or on every node if no node selector is specified). More info: http://releases.k8s.io/HEAD/docs/user-guide/replication-controller.md#pod-template"
+     },
+     "paused": {
+      "type": "boolean",
+      "description": "Indicates that the DaemonSet is paused and will not be processed by the DaemonSet controller."
+     },
+     "autoUpdate": {
+      "type": "boolean",
+      "description": "Indicates that the DaemonSet will automaticly update pods when DaemonSet Spec was changed."
+     },
+     "minReadySeconds": {
+      "type": "integer",
+      "format": "int32",
+      "description": "Minimum number of seconds for which a newly created DaemonSet pod should be ready without any of its container crashing, for it to be considered available. Defaults to 0 (pod will be considered available as soon as it is ready)."
+     },
+     "updateStrategy": {
+      "$ref": "v1beta1.DaemonSetUpdateStrategy",
+      "description": "Update strategy to replace existing DaemonSet pods with new pods."
      }
     }
    },
@@ -9733,15 +9750,49 @@
      }
     }
    },
+   "v1beta1.DaemonSetUpdateStrategy": {
+    "id": "v1beta1.DaemonSetUpdateStrategy",
+    "properties": {
+     "type": {
+      "type": "string",
+      "description": "Type of daemon set update. Only \"RollingUpdate\" is supported at this time. Default is RollingUpdate."
+     },
+     "rollingUpdate": {
+      "$ref": "v1beta1.RollingUpdateDaemonSet",
+      "description": "Rolling update config params. Present only if DaemonSetUpdateStrategy = RollingUpdate."
+     }
+    }
+   },
+   "v1beta1.RollingUpdateDaemonSet": {
+    "id": "v1beta1.RollingUpdateDaemonSet",
+    "description": "Spec to control the desired behavior of daemon set rolling update.",
+    "properties": {
+     "maxUnavailable": {
+      "type": "string",
+      "description": "The maximum number of DaemonSet pods that can be unavailable during the update. Value can be an absolute number (ex: 5) or a percentage of total number of DaemonSet pods at the start of the update (ex: 10%). Absolute number is calculated from percentage by rounding up. This cannot be 0. Default value is 1. Example: when this is set to 30%, 30% of the currently running DaemonSet pods can be stopped for an update at any given time. The update starts by stopping at most 30% of the currently running DaemonSet pods and then brings up new DaemonSet pods in their place. Once the new pods are ready, it then proceeds onto other DaemonSet pods, thus ensuring that at least 70% of original number of DaemonSet pods are available at all times during the update."
+     },
+     "minReadySeconds": {
+      "type": "integer",
+      "format": "int32",
+      "description": "Minimum number of seconds for which a newly created DaemonSet pod should be ready without any of its container crashing, for it to be considered available. Defaults to 0 (pod will be considered available as soon as it is ready)."
+     }
+    }
+   },
    "v1beta1.DaemonSetStatus": {
     "id": "v1beta1.DaemonSetStatus",
     "description": "DaemonSetStatus represents the current status of a daemon set.",
     "required": [
      "currentNumberScheduled",
      "numberMisscheduled",
-     "desiredNumberScheduled"
+     "desiredNumberScheduled",
+     "updatedNumberScheduled"
     ],
     "properties": {
+     "observedGeneration": {
+      "type": "integer",
+      "format": "int64",
+      "description": "The generation observed by the daemonset controller."
+     },
      "currentNumberScheduled": {
       "type": "integer",
       "format": "int32",
@@ -9756,6 +9807,11 @@
       "type": "integer",
       "format": "int32",
       "description": "DesiredNumberScheduled is the total number of nodes that should be running the daemon pod (including nodes correctly running the daemon pod). More info: http://releases.k8s.io/HEAD/docs/admin/daemons.md"
+     },
+     "updatedNumberScheduled": {
+      "type": "integer",
+      "format": "int32",
+      "description": "UpdatedNumberScheduled is the total number of nodes that are running updated daemon pod"
      }
     }
    },
