Update https-nginx example to use config map

--- a/examples/https-nginx/nginx-app.yaml
+++ b/examples/https-nginx/nginx-app.yaml
@@ -31,12 +31,17 @@ spec:
       - name: secret-volume
         secret:
           secretName: nginxsecret
+      - name: configmap-volume
+        configMap:
+          name: nginxconfigmap
       containers:
       - name: nginxhttps
-        image: bprashanth/nginxhttps:1.0
+        image: ymqytw/nginxhttps:1.0
         ports:
         - containerPort: 443
         - containerPort: 80
         volumeMounts:
         - mountPath: /etc/nginx/ssl
           name: secret-volume
+        - mountPath: /etc/nginx/conf.d
+          name: configmap-volume
