--- a/test/images/dnsutils/Dockerfile
+++ b/test/images/dnsutils/Dockerfile
@@ -12,9 +12,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM debian:wheezy
+FROM alpine:3.4
 MAINTAINER Tim Hockin "thockin@google.com"
 
-RUN apt-get -q update && \
-    apt-get install -y dnsutils && \
-    apt-get clean
+RUN apk update --no-cache && \
+    apk add bind-tools
