--- a/plugin/pkg/scheduler/algorithm/predicates/BUILD
+++ b/plugin/pkg/scheduler/algorithm/predicates/BUILD
@@ -49,6 +49,7 @@ go_test(
     importpath = "k8s.io/kubernetes/plugin/pkg/scheduler/algorithm/predicates",
     library = ":go_default_library",
     deps = [
+        "//pkg/apis/core/v1:go_default_library",
         "//pkg/apis/core/v1/helper:go_default_library",
         "//pkg/kubelet/apis:go_default_library",
         "//plugin/pkg/scheduler/algorithm:go_default_library",
