--- a/pkg/apis/core/BUILD
+++ b/pkg/apis/core/BUILD
@@ -10,6 +10,7 @@ go_library(
         "objectreference.go",
         "register.go",
         "resource.go",
+        "strategy.go",
         "taint.go",
         "toleration.go",
         "types.go",
@@ -33,11 +34,16 @@ go_library(
 go_test(
     name = "go_default_test",
     srcs = [
+        "strategy_test.go",
         "taint_test.go",
         "toleration_test.go",
     ],
     importpath = "k8s.io/kubernetes/pkg/apis/core",
     library = ":go_default_library",
+    deps = [
+        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
+        "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
+    ],
 )
 
 filegroup(
