--- a/pkg/kubectl/cmd/BUILD
+++ b/pkg/kubectl/cmd/BUILD
@@ -190,6 +190,7 @@ go_test(
         "replace_test.go",
         "rollingupdate_test.go",
         "run_test.go",
+        "scale_test.go",
         "taint_test.go",
         "top_node_test.go",
         "top_pod_test.go",
@@ -225,6 +226,7 @@ go_test(
         "//vendor/github.com/spf13/cobra:go_default_library",
         "//vendor/github.com/stretchr/testify/assert:go_default_library",
         "//vendor/gopkg.in/yaml.v2:go_default_library",
+        "//vendor/k8s.io/api/apps/v1beta2:go_default_library",
         "//vendor/k8s.io/api/core/v1:go_default_library",
         "//vendor/k8s.io/api/policy/v1beta1:go_default_library",
         "//vendor/k8s.io/api/rbac/v1:go_default_library",
