Add `kubectl create persistentvolumeclaim` sub-command.
Add `kubectl create persistentvolumeclaim` sub-command.

--- a/pkg/kubectl/cmd/BUILD
+++ b/pkg/kubectl/cmd/BUILD
@@ -31,6 +31,7 @@ go_library(
         "create_namespace.go",
         "create_pdb.go",
         "create_priorityclass.go",
+        "create_pvc.go",
         "create_quota.go",
         "create_role.go",
         "create_rolebinding.go",
@@ -118,6 +119,7 @@ go_library(
         "//vendor/k8s.io/api/rbac/v1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/api/meta:go_default_library",
+        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1/unstructured:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/fields:go_default_library",
@@ -168,6 +170,7 @@ go_test(
         "create_namespace_test.go",
         "create_pdb_test.go",
         "create_priorityclass_test.go",
+        "create_pvc_test.go",
         "create_quota_test.go",
         "create_role_test.go",
         "create_rolebinding_test.go",
