add subcommand "replicaset" for "kubectl create"

--- a/pkg/kubectl/BUILD
+++ b/pkg/kubectl/BUILD
@@ -102,6 +102,7 @@ go_library(
         "pdb.go",
         "priorityclass.go",
         "quota.go",
+        "replicaset.go",
         "resource_filter.go",
         "rolebinding.go",
         "rollback.go",
@@ -148,6 +149,7 @@ go_library(
         "//vendor/github.com/spf13/cobra:go_default_library",
         "//vendor/github.com/spf13/pflag:go_default_library",
         "//vendor/k8s.io/api/apps/v1beta1:go_default_library",
+        "//vendor/k8s.io/api/apps/v1beta2:go_default_library",
         "//vendor/k8s.io/api/autoscaling/v1:go_default_library",
         "//vendor/k8s.io/api/batch/v1:go_default_library",
         "//vendor/k8s.io/api/batch/v1beta1:go_default_library",
