--- a/pkg/kubectl/cmd/BUILD
+++ b/pkg/kubectl/cmd/BUILD
@@ -32,6 +32,7 @@ go_library(
         "create_pdb.go",
         "create_priorityclass.go",
         "create_quota.go",
+        "create_replicaset.go",
         "create_role.go",
         "create_rolebinding.go",
         "create_secret.go",
@@ -171,6 +172,7 @@ go_test(
         "create_pdb_test.go",
         "create_priorityclass_test.go",
         "create_quota_test.go",
+        "create_replicaset_test.go",
         "create_role_test.go",
         "create_rolebinding_test.go",
         "create_secret_test.go",
