add subcommand "statefulset" for "kubectl create"

--- a/pkg/kubectl/cmd/BUILD
+++ b/pkg/kubectl/cmd/BUILD
@@ -37,6 +37,7 @@ go_library(
         "create_secret.go",
         "create_service.go",
         "create_serviceaccount.go",
+        "create_statefulset.go",
         "delete.go",
         "describe.go",
         "diff.go",
@@ -176,6 +177,7 @@ go_test(
         "create_secret_test.go",
         "create_service_test.go",
         "create_serviceaccount_test.go",
+        "create_statefulset_test.go",
         "create_test.go",
         "delete_test.go",
         "describe_test.go",
