--- a/pkg/kubectl/BUILD
+++ b/pkg/kubectl/BUILD
@@ -116,6 +116,7 @@ go_library(
         "service_basic.go",
         "serviceaccount.go",
         "sorting_printer.go",
+        "statefulset.go",
         "versioned_client.go",
     ],
     importpath = "k8s.io/kubernetes/pkg/kubectl",
@@ -148,6 +149,7 @@ go_library(
         "//vendor/github.com/spf13/cobra:go_default_library",
         "//vendor/github.com/spf13/pflag:go_default_library",
         "//vendor/k8s.io/api/apps/v1beta1:go_default_library",
+        "//vendor/k8s.io/api/apps/v1beta2:go_default_library",
         "//vendor/k8s.io/api/autoscaling/v1:go_default_library",
         "//vendor/k8s.io/api/batch/v1:go_default_library",
         "//vendor/k8s.io/api/batch/v1beta1:go_default_library",
