--- a/pkg/apis/core/BUILD
+++ b/pkg/apis/core/BUILD
@@ -32,9 +32,16 @@ go_library(
 
 go_test(
     name = "go_default_test",
-    srcs = ["taint_test.go"],
+    srcs = [
+        "resource_test.go",
+        "taint_test.go",
+    ],
     importpath = "k8s.io/kubernetes/pkg/apis/core",
     library = ":go_default_library",
+    deps = [
+        "//vendor/github.com/davecgh/go-spew/spew:go_default_library",
+        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
+    ],
 )
 
 filegroup(
