--- a/pkg/client/clientset_generated/internalclientset/typed/batch/internalversion/BUILD
+++ b/pkg/client/clientset_generated/internalclientset/typed/batch/internalversion/BUILD
@@ -18,6 +18,7 @@ go_library(
     deps = [
         "//pkg/apis/batch:go_default_library",
         "//pkg/client/clientset_generated/internalclientset/scheme:go_default_library",
+        "//vendor/k8s.io/api/batch/v1beta1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/watch:go_default_library",
