--- a/pkg/client/clientset_generated/internalclientset/typed/batch/internalversion/fake/BUILD
+++ b/pkg/client/clientset_generated/internalclientset/typed/batch/internalversion/fake/BUILD
@@ -17,6 +17,7 @@ go_library(
     deps = [
         "//pkg/apis/batch:go_default_library",
         "//pkg/client/clientset_generated/internalclientset/typed/batch/internalversion:go_default_library",
+        "//vendor/k8s.io/api/batch/v1beta1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/labels:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
