--- a/pkg/kubectl/cmd/BUILD
+++ b/pkg/kubectl/cmd/BUILD
@@ -28,6 +28,7 @@ go_library(
         "create_clusterrolebinding.go",
         "create_configmap.go",
         "create_deployment.go",
+        "create_job.go",
         "create_namespace.go",
         "create_pdb.go",
         "create_priorityclass.go",
@@ -73,6 +74,7 @@ go_library(
         "//pkg/apis/core:go_default_library",
         "//pkg/apis/core/validation:go_default_library",
         "//pkg/client/clientset_generated/internalclientset:go_default_library",
+        "//pkg/client/clientset_generated/internalclientset/typed/batch/internalversion:go_default_library",
         "//pkg/client/clientset_generated/internalclientset/typed/core/internalversion:go_default_library",
         "//pkg/client/unversioned:go_default_library",
         "//pkg/kubectl:go_default_library",
@@ -167,6 +169,7 @@ go_test(
         "create_clusterrolebinding_test.go",
         "create_configmap_test.go",
         "create_deployment_test.go",
+        "create_job_test.go",
         "create_namespace_test.go",
         "create_pdb_test.go",
         "create_priorityclass_test.go",
