--- a/staging/BUILD
+++ b/staging/BUILD
@@ -136,6 +136,7 @@ filegroup(
         "//staging/src/k8s.io/apiserver/plugin/pkg/authorizer/webhook:all-srcs",
         "//staging/src/k8s.io/client-go/discovery:all-srcs",
         "//staging/src/k8s.io/client-go/dynamic:all-srcs",
+        "//staging/src/k8s.io/client-go/examples/controller-ref-manager:all-srcs",
         "//staging/src/k8s.io/client-go/examples/create-update-delete-deployment:all-srcs",
         "//staging/src/k8s.io/client-go/examples/in-cluster-client-configuration:all-srcs",
         "//staging/src/k8s.io/client-go/examples/out-of-cluster-client-configuration:all-srcs",
@@ -183,6 +184,7 @@ filegroup(
         "//staging/src/k8s.io/client-go/tools/bootstrap/token/util:all-srcs",
         "//staging/src/k8s.io/client-go/tools/cache:all-srcs",
         "//staging/src/k8s.io/client-go/tools/clientcmd:all-srcs",
+        "//staging/src/k8s.io/client-go/tools/controller:all-srcs",
         "//staging/src/k8s.io/client-go/tools/leaderelection:all-srcs",
         "//staging/src/k8s.io/client-go/tools/metrics:all-srcs",
         "//staging/src/k8s.io/client-go/tools/pager:all-srcs",
