--- a/test/e2e/framework/BUILD
+++ b/test/e2e/framework/BUILD
@@ -46,6 +46,7 @@ go_library(
         "//pkg/api/testapi:go_default_library",
         "//pkg/api/v1/helper:go_default_library",
         "//pkg/api/v1/pod:go_default_library",
+        "//pkg/apis/apps:go_default_library",
         "//pkg/apis/batch:go_default_library",
         "//pkg/apis/extensions:go_default_library",
         "//pkg/client/clientset_generated/internalclientset:go_default_library",
