Refactor HistoryViewerFor to use Visitor design pattern
Update bazel

change casing of error message

Fix

table driven test using reflect

gofmt

--- a/pkg/kubectl/BUILD
+++ b/pkg/kubectl/BUILD
@@ -16,6 +16,7 @@ go_test(
         "deployment_test.go",
         "env_file_test.go",
         "generate_test.go",
+        "history_test.go",
         "namespace_test.go",
         "pdb_test.go",
         "quota_test.go",
@@ -133,6 +134,7 @@ go_library(
         "//pkg/controller/deployment/util:go_default_library",
         "//pkg/controller/statefulset:go_default_library",
         "//pkg/credentialprovider:go_default_library",
+        "//pkg/kubectl/apps:go_default_library",
         "//pkg/kubectl/resource:go_default_library",
         "//pkg/kubectl/util:go_default_library",
         "//pkg/kubectl/util/hash:go_default_library",
