Update generated files

--- a/pkg/client/listers/apis/admissionregistration/BUILD
+++ b/pkg/client/listers/apis/admissionregistration/BUILD
@@ -1,9 +1,4 @@
-package(default_visibility = ["//visibility:public"])
-
-load(
-    "@io_bazel_rules_go//go:def.bzl",
-    "go_library",
-)
+load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
@@ -12,7 +7,8 @@ go_library(
         "initializerconfiguration.go",
         "validatingwebhookconfiguration.go",
     ],
-    importpath = "k8s.io/kubernetes/pkg/client/listers/admissionregistration/internalversion",
+    importpath = "k8s.io/kubernetes/pkg/client/listers/apis/admissionregistration",
+    visibility = ["//visibility:public"],
     deps = [
         "//pkg/apis/admissionregistration:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
@@ -32,4 +28,5 @@ filegroup(
     name = "all-srcs",
     srcs = [":package-srcs"],
     tags = ["automanaged"],
+    visibility = ["//visibility:public"],
 )
