Update generated files for MutatingWebhookConfiguration

--- a/pkg/client/informers/informers_generated/internalversion/admissionregistration/internalversion/BUILD
+++ b/pkg/client/informers/informers_generated/internalversion/admissionregistration/internalversion/BUILD
@@ -10,6 +10,7 @@ go_library(
     srcs = [
         "initializerconfiguration.go",
         "interface.go",
+        "mutatingwebhookconfiguration.go",
         "validatingwebhookconfiguration.go",
     ],
     importpath = "k8s.io/kubernetes/pkg/client/informers/informers_generated/internalversion/admissionregistration/internalversion",
