--- a/pkg/client/clientset_generated/internalclientset/typed/admissionregistration/internalversion/fake/BUILD
+++ b/pkg/client/clientset_generated/internalclientset/typed/admissionregistration/internalversion/fake/BUILD
@@ -11,6 +11,7 @@ go_library(
         "doc.go",
         "fake_admissionregistration_client.go",
         "fake_initializerconfiguration.go",
+        "fake_mutatingwebhookconfiguration.go",
         "fake_validatingwebhookconfiguration.go",
     ],
     importpath = "k8s.io/kubernetes/pkg/client/clientset_generated/internalclientset/typed/admissionregistration/internalversion/fake",
