--- a/staging/src/k8s.io/client-go/kubernetes/typed/admissionregistration/v1alpha1/fake/BUILD
+++ b/staging/src/k8s.io/client-go/kubernetes/typed/admissionregistration/v1alpha1/fake/BUILD
@@ -11,6 +11,7 @@ go_library(
         "doc.go",
         "fake_admissionregistration_client.go",
         "fake_initializerconfiguration.go",
+        "fake_mutatingwebhookconfiguration.go",
         "fake_validatingwebhookconfiguration.go",
     ],
     importpath = "k8s.io/client-go/kubernetes/typed/admissionregistration/v1alpha1/fake",
