--- a/pkg/kubectl/BUILD
+++ b/pkg/kubectl/BUILD
@@ -201,6 +201,7 @@ filegroup(
         ":package-srcs",
         "//pkg/kubectl/apply:all-srcs",
         "//pkg/kubectl/apps:all-srcs",
+        "//pkg/kubectl/categories:all-srcs",
         "//pkg/kubectl/cmd:all-srcs",
         "//pkg/kubectl/explain:all-srcs",
         "//pkg/kubectl/metricsutil:all-srcs",
