Small refactor: Pretty object print util
- Fixed issue : https://github.com/kubernetes/kubernetes/issues/8976

--- a/test/utils/BUILD
+++ b/test/utils/BUILD
@@ -25,6 +25,7 @@ go_library(
         "//pkg/client/clientset_generated/internalclientset:go_default_library",
         "//pkg/controller/deployment/util:go_default_library",
         "//pkg/util/labels:go_default_library",
+        "//pkg/util/print:go_default_library",
         "//vendor/github.com/davecgh/go-spew/spew:go_default_library",
         "//vendor/github.com/golang/glog:go_default_library",
         "//vendor/k8s.io/api/batch/v1:go_default_library",
