--- a/pkg/api/endpoints/BUILD
+++ b/pkg/api/endpoints/BUILD
@@ -24,7 +24,7 @@ go_test(
     library = ":go_default_library",
     deps = [
         "//pkg/apis/core:go_default_library",
-        "//vendor/github.com/davecgh/go-spew/spew:go_default_library",
+        "//pkg/util/print:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
     ],
 )
