--- a/pkg/util/BUILD
+++ b/pkg/util/BUILD
@@ -42,6 +42,7 @@ filegroup(
         "//pkg/util/oom:all-srcs",
         "//pkg/util/parsers:all-srcs",
         "//pkg/util/pointer:all-srcs",
+        "//pkg/util/print:all-srcs",
         "//pkg/util/procfs:all-srcs",
         "//pkg/util/reflector/prometheus:all-srcs",
         "//pkg/util/removeall:all-srcs",
