--- a/test/e2e/apps/BUILD
+++ b/test/e2e/apps/BUILD
@@ -39,12 +39,12 @@ go_library(
         "//pkg/kubectl:go_default_library",
         "//pkg/master/ports:go_default_library",
         "//pkg/util/pointer:go_default_library",
+        "//pkg/util/print:go_default_library",
         "//plugin/pkg/scheduler/schedulercache:go_default_library",
         "//test/e2e/common:go_default_library",
         "//test/e2e/framework:go_default_library",
         "//test/utils:go_default_library",
         "//test/utils/image:go_default_library",
-        "//vendor/github.com/davecgh/go-spew/spew:go_default_library",
         "//vendor/github.com/onsi/ginkgo:go_default_library",
         "//vendor/github.com/onsi/gomega:go_default_library",
         "//vendor/k8s.io/api/apps/v1beta1:go_default_library",
