Update generated files

--- a/pkg/apis/settings/install/BUILD
+++ b/pkg/apis/settings/install/BUILD
@@ -13,6 +13,7 @@ go_library(
         "//pkg/api/legacyscheme:go_default_library",
         "//pkg/apis/settings:go_default_library",
         "//pkg/apis/settings/v1alpha1:go_default_library",
+        "//vendor/k8s.io/api/settings/install:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apimachinery/announced:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apimachinery/registered:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
