--- a/pkg/apis/apps/install/BUILD
+++ b/pkg/apis/apps/install/BUILD
@@ -15,6 +15,7 @@ go_library(
         "//pkg/apis/apps/v1:go_default_library",
         "//pkg/apis/apps/v1beta1:go_default_library",
         "//pkg/apis/apps/v1beta2:go_default_library",
+        "//vendor/k8s.io/api/apps/install:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apimachinery/announced:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apimachinery/registered:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
