--- a/pkg/apis/autoscaling/install/BUILD
+++ b/pkg/apis/autoscaling/install/BUILD
@@ -14,6 +14,7 @@ go_library(
         "//pkg/apis/autoscaling:go_default_library",
         "//pkg/apis/autoscaling/v1:go_default_library",
         "//pkg/apis/autoscaling/v2beta1:go_default_library",
+        "//vendor/k8s.io/api/autoscaling/install:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apimachinery/announced:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apimachinery/registered:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
