--- a/pkg/kubectl/scheme/BUILD
+++ b/pkg/kubectl/scheme/BUILD
@@ -9,41 +9,27 @@ go_library(
     importpath = "k8s.io/kubernetes/pkg/kubectl/scheme",
     visibility = ["//visibility:public"],
     deps = [
-        "//vendor/k8s.io/api/admission/v1alpha1:go_default_library",
-        "//vendor/k8s.io/api/admissionregistration/v1alpha1:go_default_library",
-        "//vendor/k8s.io/api/apps/v1:go_default_library",
-        "//vendor/k8s.io/api/apps/v1beta1:go_default_library",
-        "//vendor/k8s.io/api/apps/v1beta2:go_default_library",
-        "//vendor/k8s.io/api/authentication/v1:go_default_library",
-        "//vendor/k8s.io/api/authentication/v1beta1:go_default_library",
-        "//vendor/k8s.io/api/authorization/v1:go_default_library",
-        "//vendor/k8s.io/api/authorization/v1beta1:go_default_library",
-        "//vendor/k8s.io/api/autoscaling/v1:go_default_library",
-        "//vendor/k8s.io/api/autoscaling/v2beta1:go_default_library",
-        "//vendor/k8s.io/api/batch/v1:go_default_library",
-        "//vendor/k8s.io/api/batch/v1beta1:go_default_library",
-        "//vendor/k8s.io/api/batch/v2alpha1:go_default_library",
-        "//vendor/k8s.io/api/certificates/v1beta1:go_default_library",
-        "//vendor/k8s.io/api/core/v1:go_default_library",
-        "//vendor/k8s.io/api/extensions/v1beta1:go_default_library",
-        "//vendor/k8s.io/api/imagepolicy/v1alpha1:go_default_library",
-        "//vendor/k8s.io/api/networking/v1:go_default_library",
-        "//vendor/k8s.io/api/policy/v1beta1:go_default_library",
-        "//vendor/k8s.io/api/rbac/v1:go_default_library",
-        "//vendor/k8s.io/api/rbac/v1alpha1:go_default_library",
-        "//vendor/k8s.io/api/rbac/v1beta1:go_default_library",
-        "//vendor/k8s.io/api/scheduling/v1alpha1:go_default_library",
-        "//vendor/k8s.io/api/settings/v1alpha1:go_default_library",
-        "//vendor/k8s.io/api/storage/v1:go_default_library",
-        "//vendor/k8s.io/api/storage/v1beta1:go_default_library",
+        "//vendor/k8s.io/api/admission/install:go_default_library",
+        "//vendor/k8s.io/api/admissionregistration/install:go_default_library",
+        "//vendor/k8s.io/api/apps/install:go_default_library",
+        "//vendor/k8s.io/api/authentication/install:go_default_library",
+        "//vendor/k8s.io/api/authorization/install:go_default_library",
+        "//vendor/k8s.io/api/autoscaling/install:go_default_library",
+        "//vendor/k8s.io/api/batch/install:go_default_library",
+        "//vendor/k8s.io/api/certificates/install:go_default_library",
+        "//vendor/k8s.io/api/core/install:go_default_library",
+        "//vendor/k8s.io/api/extensions/install:go_default_library",
+        "//vendor/k8s.io/api/imagepolicy/install:go_default_library",
+        "//vendor/k8s.io/api/networking/install:go_default_library",
+        "//vendor/k8s.io/api/policy/install:go_default_library",
+        "//vendor/k8s.io/api/rbac/install:go_default_library",
+        "//vendor/k8s.io/api/scheduling/install:go_default_library",
+        "//vendor/k8s.io/api/settings/install:go_default_library",
+        "//vendor/k8s.io/api/storage/install:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apimachinery/announced:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apimachinery/registered:go_default_library",
-        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
-        "//vendor/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/runtime/serializer:go_default_library",
-        "//vendor/k8s.io/apimachinery/pkg/util/sets:go_default_library",
-        "//vendor/k8s.io/client-go/kubernetes/scheme:go_default_library",
     ],
 )
 
