--- a/pkg/registry/scheduling/rest/BUILD
+++ b/pkg/registry/scheduling/rest/BUILD
@@ -12,8 +12,8 @@ go_library(
     deps = [
         "//pkg/api/legacyscheme:go_default_library",
         "//pkg/apis/scheduling:go_default_library",
-        "//pkg/apis/scheduling/v1alpha1:go_default_library",
         "//pkg/registry/scheduling/priorityclass/storage:go_default_library",
+        "//vendor/k8s.io/api/scheduling/v1alpha1:go_default_library",
         "//vendor/k8s.io/apiserver/pkg/registry/generic:go_default_library",
         "//vendor/k8s.io/apiserver/pkg/registry/rest:go_default_library",
         "//vendor/k8s.io/apiserver/pkg/server:go_default_library",
