--- a/staging/BUILD
+++ b/staging/BUILD
@@ -17,31 +17,48 @@ filegroup(
     name = "all-srcs",
     srcs = [
         ":package-srcs",
+        "//staging/src/k8s.io/api/admission/install:all-srcs",
         "//staging/src/k8s.io/api/admission/v1alpha1:all-srcs",
+        "//staging/src/k8s.io/api/admissionregistration/install:all-srcs",
         "//staging/src/k8s.io/api/admissionregistration/v1alpha1:all-srcs",
+        "//staging/src/k8s.io/api/apps/install:all-srcs",
         "//staging/src/k8s.io/api/apps/v1:all-srcs",
         "//staging/src/k8s.io/api/apps/v1beta1:all-srcs",
         "//staging/src/k8s.io/api/apps/v1beta2:all-srcs",
+        "//staging/src/k8s.io/api/authentication/install:all-srcs",
         "//staging/src/k8s.io/api/authentication/v1:all-srcs",
         "//staging/src/k8s.io/api/authentication/v1beta1:all-srcs",
+        "//staging/src/k8s.io/api/authorization/install:all-srcs",
         "//staging/src/k8s.io/api/authorization/v1:all-srcs",
         "//staging/src/k8s.io/api/authorization/v1beta1:all-srcs",
+        "//staging/src/k8s.io/api/autoscaling/install:all-srcs",
         "//staging/src/k8s.io/api/autoscaling/v1:all-srcs",
         "//staging/src/k8s.io/api/autoscaling/v2beta1:all-srcs",
+        "//staging/src/k8s.io/api/batch/install:all-srcs",
         "//staging/src/k8s.io/api/batch/v1:all-srcs",
         "//staging/src/k8s.io/api/batch/v1beta1:all-srcs",
         "//staging/src/k8s.io/api/batch/v2alpha1:all-srcs",
+        "//staging/src/k8s.io/api/certificates/install:all-srcs",
         "//staging/src/k8s.io/api/certificates/v1beta1:all-srcs",
+        "//staging/src/k8s.io/api/core/install:all-srcs",
         "//staging/src/k8s.io/api/core/v1:all-srcs",
+        "//staging/src/k8s.io/api/extensions/install:all-srcs",
         "//staging/src/k8s.io/api/extensions/v1beta1:all-srcs",
+        "//staging/src/k8s.io/api/imagepolicy/install:all-srcs",
         "//staging/src/k8s.io/api/imagepolicy/v1alpha1:all-srcs",
+        "//staging/src/k8s.io/api/networking/install:all-srcs",
         "//staging/src/k8s.io/api/networking/v1:all-srcs",
+        "//staging/src/k8s.io/api/policy/install:all-srcs",
         "//staging/src/k8s.io/api/policy/v1beta1:all-srcs",
+        "//staging/src/k8s.io/api/rbac/install:all-srcs",
         "//staging/src/k8s.io/api/rbac/v1:all-srcs",
         "//staging/src/k8s.io/api/rbac/v1alpha1:all-srcs",
         "//staging/src/k8s.io/api/rbac/v1beta1:all-srcs",
+        "//staging/src/k8s.io/api/scheduling/install:all-srcs",
         "//staging/src/k8s.io/api/scheduling/v1alpha1:all-srcs",
+        "//staging/src/k8s.io/api/settings/install:all-srcs",
         "//staging/src/k8s.io/api/settings/v1alpha1:all-srcs",
+        "//staging/src/k8s.io/api/storage/install:all-srcs",
         "//staging/src/k8s.io/api/storage/v1:all-srcs",
         "//staging/src/k8s.io/api/storage/v1alpha1:all-srcs",
         "//staging/src/k8s.io/api/storage/v1beta1:all-srcs",
