Introduce storage v1alpha1 and VolumeAttachment
Introduce the v1alpha1 version to the Kubernetes storage API. And add a
new VolumeAttachment object to that version. This object will initially
be used only by the new CSI Volume Plugin. Eventually existing volume
plugins can be refactored to use it too.

--- a/pkg/registry/BUILD
+++ b/pkg/registry/BUILD
@@ -82,6 +82,7 @@ filegroup(
         "//pkg/registry/settings/rest:all-srcs",
         "//pkg/registry/storage/rest:all-srcs",
         "//pkg/registry/storage/storageclass:all-srcs",
+        "//pkg/registry/storage/volumeattachment:all-srcs",
     ],
     tags = ["automanaged"],
 )
