pkg/api/core: move pkg/api/service

--- a/pkg/apis/core/helper/BUILD
+++ b/pkg/apis/core/helper/BUILD
@@ -46,6 +46,7 @@ filegroup(
     srcs = [
         ":package-srcs",
         "//pkg/apis/core/helper/qos:all-srcs",
+        "//pkg/apis/core/helper/service:all-srcs",
     ],
     tags = ["automanaged"],
 )
