pkg/apis/core: update import restrictions

--- a/hack/import-restrictions.yaml
+++ b/hack/import-restrictions.yaml
@@ -11,11 +11,11 @@
   # the following are temporary and should go away. Think twice (or more) before adding anything here.
   # Main goal: pkg/apis should be as self-contained as possible.
   - k8s.io/kubernetes/pkg/apis/extensions
-  - k8s.io/kubernetes/pkg/api/legacyscheme
-  - k8s.io/kubernetes/pkg/api/testapi
   - k8s.io/api/extensions/v1beta1
+
   ignoredSubTrees:
   - "./pkg/apis/core/validation"
+  - "./pkg/apis/core/install"
 
 - baseImportPath: "./vendor/k8s.io/apimachinery/"
   allowedImports:
