--- a/cmd/kube-proxy/BUILD
+++ b/cmd/kube-proxy/BUILD
@@ -10,13 +10,8 @@ load("//pkg/version:def.bzl", "version_x_defs")
 go_binary(
     name = "kube-proxy",
     embed = [":go_default_library"],
-    gc_linkopts = [
-        "-linkmode",
-        "external",
-        "-extldflags",
-        "-static",
-    ],
     importpath = "k8s.io/kubernetes/cmd/kube-proxy",
+    pure = "on",
     x_defs = version_x_defs(),
 )
 
