Add validate.NonNegativeQuantity for APIs
Convert callers of older function, remove.

--- a/staging/src/k8s.io/apimachinery/pkg/api/validate/BUILD
+++ b/staging/src/k8s.io/apimachinery/pkg/api/validate/BUILD
@@ -12,7 +12,10 @@ go_library(
         "validate.go",
     ],
     importpath = "k8s.io/apimachinery/pkg/api/validate",
-    deps = ["//vendor/k8s.io/apimachinery/pkg/util/validation/field:go_default_library"],
+    deps = [
+        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
+        "//vendor/k8s.io/apimachinery/pkg/util/validation/field:go_default_library",
+    ],
 )
 
 filegroup(
